t: deploy user activation
