# src/controllers/auth.controller.ts
@@ -22,7 +22,23 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number ", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password Not Match"),
@@ -30,6 +46,9 @@ const registerValidateSchema = Yup.object({
 // buat controller Register
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     */
     // ambil data user dari request body
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
@@ -68,6 +87,7 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.requestBody ={
      required: true,
      schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -86,6 +106,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true
       });
 
       if (!userByIdentifier) {
@@ -126,6 +147,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.security =[{
       "bearerAuth": []
      }]
@@ -139,6 +161,41 @@ export default {
         message: "Success Get User Profile",
         data: result,
       });
+    } catch (error) {
+      const err = error as unknown as Error;
+      // jika validasi gagal maka kirim response status 400 / bad request dengan message error
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+/**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody ={
+     required: true,
+     schema:{$ref: '#/components/schemas/ActivationRequest'}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        response: "User Successfully Activated",
+        data: user
+      })
     } catch (error) {
       const err = error as unknown as Error;
       // jika validasi gagal maka kirim response status 400 / bad request dengan message error
